7-3-17 RN and LLRN

--- a/docs/releases/release_notes/7.3.md
+++ b/docs/releases/release_notes/7.3.md
@@ -36,10 +36,6 @@ issue is resolved in one of the upcoming releases.
 
 ![Disable NAT44 discovery task for FortiGate](./7.2/7.2_disabled_task_forti_nat44.png)
 
-#### Intent Checks Removed from Dashboard Widget
-
-When adding an intent check to a dashboard widget directly from the intent check configuration, **all other** intent checks in that widget **are removed**.
-
 #### NX-OS Routing Table Discovery Issues
 
 In version `7.3`, we introduced support for the Cisco NX-OS `show ip route detail full` command to retrieve truncated routing table information. Unfortunately, this implementation causes the discovery algorithm to hang when processing certain NX-OS devices.
@@ -47,24 +43,36 @@ In version `7.3`, we introduced support for the Cisco NX-OS `show ip route detai
 If you're experiencing extended discovery times (9+ hours), this issue is likely the cause. As a temporary workaround, disable the **Routing table** task for affected devices (SNs or whole NX-OS family) under:
 **Settings → Discovery & Snapshots → Discovery Settings → Disabled Discovery Tasks**.
 
-## v7.3.16 (August 6th, 2025; GA)
+## v7.3.17 (August 7th, 2025; GA)
 
 ```
-SHA256 (ipfabric-update-7-3-16+0.tar.zst.sig) = d8c426f6dbfe7f05a9f1da2f694ab761ca9cd0f63ba45f26dc84ee45a875d6f5
-MD5 (ipfabric-update-7-3-16+0.tar.zst.sig) = 15196928c12bdb80ccca52494e00bd3b
-SHA256 (ipfabric-7-3-16+0.qcow2) = 5299ed756a66350f07988dd6f0b6131e6803d566ab38134b9cd90b354010e2f5
-MD5 (ipfabric-7-3-16+0.qcow2) = eb864fe6363b86c2f67fb128c3912984
-SHA256 (ipfabric-7-3-16+0.vmdk) = 8f378af13507d87cdc26b81be478164264760b074ef4ddbf9d7b1145c5ffbae4
-MD5 (ipfabric-7-3-16+0.vmdk) = 1b74ab109572bc280b2cffd277855595
-SHA256 (ipfabric-7-3-16+0.vhdx.zst) = 10e3806f87a70507a30e253d253bdf15c45d86f8b9477e4c25c29887874ffac6
-MD5 (ipfabric-7-3-16+0.vhdx.zst) = 60aacff42c6da6fe9ac6232de1dbc6da
-SHA256 (unsupported-ESXi6.7U2-ipfabric-7-3-16+0.ova) = f701fd08fe1a1a6fba31627d5efbcadd2df2d59f48a96e3ded06d106678060e2
-MD5 (unsupported-ESXi6.7U2-ipfabric-7-3-16+0.ova) = ddb1cb2f3c7667bee0c3256a4deee094
-SHA256 (unsupported-ESXi7.0-ipfabric-7-3-16+0.ova) = 70bdb3a32cda2f34a19a8fed8a7cb95252bfb1646e3deeb224324c56a149b2e1
-MD5 (unsupported-ESXi7.0-ipfabric-7-3-16+0.ova) = 63ed0ba2f0a399cdb314ee7743edfb9b
-SHA256 (ESXi8.0-ipfabric-7-3-16+0.ova) = 3d141a4a436941347395175cb20c477e6239b52f6abd6e21790e87b9f44b18b7
-MD5 (ESXi8.0-ipfabric-7-3-16+0.ova) = 969e6e121aa41dbc6b0a86261d95f503
+SHA256 (ipfabric-update-7-3-17+0.tar.zst.sig) = 1c280f2bdf72ea256167c022ec0096e44c44688426fa47b10831735118a1f4ca
+MD5 (ipfabric-update-7-3-17+0.tar.zst.sig) = 5a58c1b0ece3a7c05d1dc011234e090d
+SHA256 (ipfabric-7-3-17+0.qcow2) = e100a57b2151827da43f8b96d18312747cfb1e054782f5a7a8926ed605f3053c
+MD5 (ipfabric-7-3-17+0.qcow2) = 135424ff72356535c7ae9a9c0a588c7a
+SHA256 (ipfabric-7-3-17+0.vmdk) = a805b3a5a3e8bcbf57e8b90c97cf55df2dd3eaed4c7dfbac36a7b88deefd60db
+MD5 (ipfabric-7-3-17+0.vmdk) = 047b36faac758a19177691040506554d
+SHA256 (ipfabric-7-3-17+0.vhdx.zst) = 2bd4b11a365d0ff00d4fbff397bd9d577406588e51e23decbcaf6a3b57dc3ef2
+MD5 (ipfabric-7-3-17+0.vhdx.zst) = 9ddd3dd5590cf0348436fe3aae895592
+SHA256 (unsupported-ESXi6.7U2-ipfabric-7-3-17+0.ova) = 1eb90d2279396b939c6c43163b0fb6552833f7a07736f29ca73e93bf5f90e18a
+MD5 (unsupported-ESXi6.7U2-ipfabric-7-3-17+0.ova) = 714b398878726a9098e90d72c042ee37
+SHA256 (unsupported-ESXi7.0-ipfabric-7-3-17+0.ova) = 0a24db2aa8ab809bad8a703c61f4bf7fb6fb7163ee1ba3fdc998f16311a33edc
+MD5 (unsupported-ESXi7.0-ipfabric-7-3-17+0.ova) = cba45f7a5f4c6ac5acee00ed97eb64aa
+SHA256 (ESXi8.0-ipfabric-7-3-17+0.ova) = e40842bad289ebe61ffecd346f7bd07deb15d57b526e7d7b89a16416f1646b15
+MD5 (ESXi8.0-ipfabric-7-3-17+0.ova) = 8b990985a771d1db552f5f035b9aa6d7
 ```
+
+### Fixes
+
+#### Intent Checks Removed from Dashboard Widget
+
+When adding an intent check to a dashboard widget directly from the intent check configuration, **all other** intent checks in that widget **are removed**.
+
+#### Silverpeak RBAC API Key
+
+Discovery of Silverpeak devices via RBAC API keys has been fixed.
+
+## v7.3.16 (August 6th, 2025; GA)
 
 ### Improvements
 
