--- a/docs/releases/release_notes_low-level/7.x/7.3.md
+++ b/docs/releases/release_notes_low-level/7.x/7.3.md
@@ -6,7 +6,36 @@ search:
 
 # LLRN 7.3
 
-These are low-level release notes for IP Fabric release branch `7.3`. Please note, that this page contains very low-level information about the actual release, which can lead to false conclusions if you don’t have access to the tickets. On the other hand, it can provide valuable information, if you are looking for a particular detail. This release branch contains a total of 571 fixed issues.
+These are low-level release notes for IP Fabric release branch `7.3`. Please note, that this page contains very low-level information about the actual release, which can lead to false conclusions if you don’t have access to the tickets. On the other hand, it can provide valuable information, if you are looking for a particular detail. This release branch contains a total of 588 fixed issues.
+
+## 7.3.17
+
+### Bugs
+
+Anything that we considered an incorrect behavior. Something that was not working as expected or turned out that did not meet customers' demand.
+
+- `NIM-18826` -- Highest -- Creating New Intent Rule Removes all existing rules from group
+- `NIM-20095` -- Highest -- Discovery syslogworker configuration backup - performance logger does not log
+- `NIM-20377` -- High -- PaloAlto - login problem
+- `NIM-20529` -- High -- IPF 7.2+ upgrade should fix broken PSQL during upgrade
+- `NIM-20530` -- High -- Cisco WLC failing on "SSH client has not received any data for the last 300000 ms! cmd => show client summary"
+- `NIM-20844` -- Highest -- `/tables/platforms/vdc/devices` Not properly deprecated - Not in any Release Notes
+- `NIM-20849` -- Highest -- Azure tasks/routingTable mapping duration too long, blocking event loop and stuck discovery
+- `NIM-20854` -- High -- Silverpeak - 403 errors on API calls when RBAC rule is applied
+- `NIM-20895` -- High -- IPF 7.3 & 7.5 - Configuration Management diff doesn't consider SN+hash but only hash
+- `NIM-20922` -- Highest -- Adding intent check to dashboard via intent check itself deletes all checks in the widget
+- `NIM-20935` -- Medium -- Network Analysis Report has some data from wrong snapshot
+- `NIM-20944` -- Medium -- Azure ER Circuit ARP - Error: Cannot read properties of null (reading 'value')
+- `NIM-20953` -- High -- Long time getting snapshot logs
+- `NIM-20960` -- Highest -- Azure Discovery - hubRouteTables command causing slowness
+- `NIM-20971` -- Highest -- Azure tasks/routingTable mapping is taking too long
+
+### Tasks
+
+Task may be associated into Epics or Stories to form complex features.
+
+- `NIM-20957` -- Medium -- Cisco ACI - change mapping of any group from range to trivial true
+- `NIM-20970` -- Medium -- Optimize the StartLimit of discovery services
 
 ## 7.3.16
 
@@ -37,16 +66,15 @@ Anything that we considered an incorrect behavior. Something that was not workin
 - `NIM-20551` -- Medium -- ipf-system-upgrade possible race condition with upgrade-status.json
 - `NIM-20564` -- Medium -- Fortigate - global cache in preprocess task use sn without suffix
 - `NIM-20827` -- Medium -- ACI - security evaluation - expand BD's pcTags to IP ranges
-- `NIM-20849` -- Highest -- Azure tasks/routingTable mapping duration too long, blocking event loop and stuck discovery
 - `NIM-20850` -- Highest -- Azure expressRouteCircuits commands - lock could not be acquired for 3620000 millis, stuck discovery
 
 ### Tasks
 
 Task may be associated into Epics or Stories to form complex features.
 
+- `NIM-20371` -- High -- Stop licensing lightweight wireless AP controllers [7.3, 7.5, 7.6]
 - `NIM-20828` -- Medium -- Upgrade pre-check should check available size on the root filesystem
 - `NIM-20838` -- Medium -- Fortigate Execute tasks/pbr just for masterUnit
-- `NIM-20371` -- High -- Stop licensing lightweight wireless AP controllers
 
 ## 7.3.15
 
