NIM-19972 Add section about new way of API versioning

--- a/docs/releases/release_notes/7.5.md
+++ b/docs/releases/release_notes/7.5.md
@@ -179,11 +179,16 @@ Network Function Groups and connectivity to Direct Connect Gateways, will be add
 
 ### API Changes
 
-#### Optional data in API responses
+#### Deprecated URL Path Versioning of API Endpoints
+
+With this release, we are deprecating URL path versioning of API endpoints in favor of a header-based approach.
+For migration instructions, please refer to the [Versioning](../../IP_Fabric_API/versioning.md#api-version-in-url-path-deprecated) page.
+
+#### Optional Data in API Responses
 
 In previous versions, optional fields were omitted from certain API responses if they were not set. As of this release, optional fields are explicitly included with a `null` value when unset.
 
-#### Technology tables
+#### Technology Tables
 
 - The following column operations are no more supported:
   - Cross-column on text and text array column: `like`, `notlike`, `reg`, `nreg`, `ireg`, `nireg`
