Update snippet to include 7.3.17, clarify dashboard issue

--- a/docs/releases/release_notes/7.3.md
+++ b/docs/releases/release_notes/7.3.md
@@ -66,7 +66,7 @@ MD5 (ESXi8.0-ipfabric-7-3-17+0.ova) = 8b990985a771d1db552f5f035b9aa6d7
 
 #### Intent Checks Removed from Dashboard Widget
 
-When adding an intent check to a dashboard widget directly from the intent check configuration, **all other** intent checks in that widget **are removed**.
+When editing or adding an intent check to a dashboard widget directly from the intent check configuration, **all other** intent checks in that widget **are removed**.
 
 #### Silverpeak RBAC API Key
 
