NIM-21014 add documentation for Manual links

--- a/docs/releases/release_notes/7.3.md
+++ b/docs/releases/release_notes/7.3.md
@@ -501,3 +501,6 @@ Once enabled, transparent firewalls will appear in the **graph topology**, and *
 !!! info "Visualization Setup"
 
     In case that you want to edit **Manual Link Protocol Settings** --> **Line Cap Label** field, it incorrectly permits IP address selection.
+
+#### Manual Links
+New feature that allows you to create links manually. Full documentation can be found in [Manual Links](../../IP_Fabric_Settings/Discovery_and_Snapshots/Discovery_Settings/manual_links.md).
