NIM-21029 add ENABLE_ACI_FVTENANT_ENDPOINT to deprecated FFs

--- a/docs/releases/release_notes/7.5.md
+++ b/docs/releases/release_notes/7.5.md
@@ -201,7 +201,7 @@ In previous versions, optional fields were omitted from certain API responses if
 
 ### Other Changes
 
-- Feature flag `ENABLE_ACI_FVTENANT` **was removed**
+- Feature flag [`ENABLE_ACI_FVTENANT_ENDPOINT`](../../System_Administration/Command_Line_Interface/Feature_Flags.md#aci-fvtenant-api-endpoint-removed-in-75) **was removed**
 - **Routing tables** in Device Explorer **were renamed**:
 
   - `Cumulative IPv4 routing table` → **IPv4 routing table**
