--- a/docs/releases/release_notes/7.5.md
+++ b/docs/releases/release_notes/7.5.md
@@ -2,20 +2,90 @@
 description: In this section, you can find the release notes for `v7.5` releases.
 ---
 
-# IP Fabric `v7.5`
+# IP Fabric v7.5
 
 !!! danger "Unreleased Version"
 
     This is an upcoming IP Fabric version, which has not been released yet and
     is not available for download.
 
---8<-- "snippets/upgrade_version_policy.md"
+--8<-- "snippets/upgrade_version_policy_7_5.md"
 
 --8<-- "snippets/clear_browser_cache.md"
 
-## Backward compatibility
+## Backward Compatibility
 
-- Snapshots from release `5.X` and earlier are not supported and may fail to load properly.
+- Snapshots from release `5.x` and earlier are not supported and may fail to load properly.
+
+## Upgrade Guide for **7.5** Release
+
+This guide walks you through a safe, in-place upgrade from IP Fabric `v7.3` (or newer) to `v7.5`,  
+which in turn migrates the database from **ArangoDB** to **PostgreSQL**.
+---
+
+### Before You Begin
+
+| Item | Requirement |
+|------|-------------|
+| **Supported Starting Version** | Your appliance must be on the latest version of **v7.3**. |
+| **Hardware** | **Ideally directly attached NVMe storage is necessary.** Minimum requirements: **8 vCPU, 32 GB RAM**.<div class="admonition info"><p class="admonition-title">Why NVMe?</p><p>PostgreSQL’s performance relies heavily on fast random I/O. Rotary (HDD) storage is no longer supported for production.</p></div> |
+| **Downtime** | Plan a maintenance window of **2+ hours**, depending on snapshot sizes, amount and hardware performance. |
+| **Backup** | Take a **hypervisor snapshot** *after shutting down* the VM (cold snapshot). |
+| **Benchmark (optional but strongly recommended)** | Run `ipf-checker` for **at least 30 minutes** to measure disk performance. (The test saturates the appliance; **schedule during off-hours**.) |
+| **Customer Support** | Have your IP Fabric Support contact handy in case questions arise. You can also [submit a ticket](https://ipfabric.atlassian.net/servicedesk/customer/portal/1) to our service desk. |
+
+---
+
+### Step-by-Step Upgrade Workflow
+
+Follow the steps in order. **Do not interrupt the process** once Step 4 (Launch the `v7.5` upgrade) begins.
+
+??? note "Step 1 - Plan & Notify"
+    1. Make sure that prerequisites above are met.
+    2. Schedule a downtime window and inform stakeholders that the appliance will be offline.
+
+??? note "Step 2 - Prepare the Appliance"
+    1. Shut down the appliance gracefully from the UI (**System → Shutdown**).
+    2. Create a cold snapshot in your hypervisor; verify its completion.
+    3. Power the appliance back on.
+
+??? note "Step 3 - Run Pre-upgrade Health Check *(optional)*"
+    ```shell
+    sudo ipf-checker -d -s
+    ```
+    Let the test run to completion (≈ 30 minutes).
+    Save the output for future reference; we would appreciate if you shared this output with our team, if possible.
+    Reach out to the team [here](https://ipfabric.atlassian.net/servicedesk/customer/portal/1).
+
+??? note "Step 4 - Launch the `v7.5` Upgrade"
+    1. Log in via SSH as an administrative user.
+    2. Download and execute the upgrade package provided by IP Fabric.
+    3. Monitor the console; the upgrade will:
+
+       - Export configuration and snapshots 
+       - Stop services
+       - Install `v7.5` components
+       - Start services and migrate data to **PostgreSQL**
+       - Import configuration and snapshots
+
+    4. When the upgrade completes successfully, proceed to Step 5.
+
+??? note "Step 5 - Post-upgrade Validation"
+    1. Log in to the UI, ensure the dashboard loads without errors. If you see errors, reach out to our team.
+    2. Navigate through a few historical snapshots to confirm data integrity (i.e. check your list of devices to confirm it matches what you expect).
+    3. Launch a Discovery and verify that it finishes.
+    4. Optionally run a quick API request or path lookup to confirm core functionality.
+    5. Observe CPU, RAM usage to ensure the VM is not overloaded.
+
+---
+
+!!! info
+
+    Migrating to **PostgreSQL** will accelerate delivery of **future IP Fabric features and enhancements**, enabling greater scalability.
+
+    We appreciate your cooperation in following the guide above closely to ensure a seamless upgrade.
+
+    If you need guidance, please reach out to our team -- [Support Portal](https://ipfabric.atlassian.net/servicedesk/customer/portal/1).
 
 ## Known Issues
 
