--- a/docs/releases/release_notes/7.5.md
+++ b/docs/releases/release_notes/7.5.md
@@ -9,7 +9,20 @@ description: In this section, you can find the release notes for `v7.5` releases
     This is an upcoming IP Fabric version, which has not been released yet and
     is not available for download.
 
---8<-- "snippets/upgrade_version_policy_7_5.md"
+!!! danger "Upgrade Notice"
+
+    An upgrade to `7.5.x` or later is **only** possible from release `7.3.17`.
+
+    When upgrading to `7.5` release, database will be migrated from **ArangoDB** to **PostgreSQL**.
+
+    For detailed upgrade guide, see [Upgrade Guide for **7.5** Release](#upgrade-guide-for-75-release).
+
+    Note that [hardware requirements](../../overview/index.md#hardware-requirements) differ from previous releases.
+
+    We strongly recommend installing release `7.5` only on secondary instances within the EA program.
+
+    Before upgrading, review the [API Changes](#api-changes),
+    [Backward Compatibility](#backward-compatibility) and [Known Issues](#known-issues) sections.
 
 --8<-- "snippets/clear_browser_cache.md"
 
