NIM-20981 Rename Cloud Scaling Groups to Cloud Endpoint Groups

--- a/docs/releases/release_notes/7.5.md
+++ b/docs/releases/release_notes/7.5.md
@@ -245,7 +245,7 @@ Network Function Groups and connectivity to Direct Connect Gateways, will be add
 - Added support for the MAC address table on Meraki switches.
 - Added mapping for STP port statuses on Meraki switches.
 - A new task Cloud Subnets was added to save more information related to cloud subnets in the device JSON.
-- A new task Cloud Scaling Groups was added to save more information related to scaling groups in the device JSON.
+- A new task Cloud Endpoint Groups was added to save more information related to scaling and endpoint groups in the device JSON.
 - A new task Cloud Interface Endpoints was added to save more information related to interface endpoints in the device JSON.
 - Tables in **Technology → Cloud → Endpoints** now also include instances from Azure Virtual Machine Scale Sets in Uniform mode.
 - Added support for F5 rSeries (F5OSA) and F5 VELOS (F5OSC) discovery.
