--- a/docs/releases/release_notes/7.5.md
+++ b/docs/releases/release_notes/7.5.md
@@ -260,6 +260,11 @@ Network Function Groups and connectivity to Direct Connect Gateways, will be add
 - Configuration Management now fully supports IPv6-configured devices with all available functionalities.
 - Added support for Cisco Viptela (Cisco Catalyst SD-WAN) when [API+CLI combined discovery](../../IP_Fabric_Settings/Discovery_and_Snapshots/Discovery_Settings/Vendors_API/Cisco_Viptela_SD-WAN.md) is configured.
 
+#### Release Channels
+
+- If you are part of the EA program, you can configure your staging instance to use the EA [release channel](../../System_Administration/system_update.md#release-channels) to receive online upgrades when new versions become available. Please contact your IP Fabric Solution Architect or Customer Success Manager to obtain the current EA release channel name.
+
+
 ### API Changes
 
 #### Deprecated URL Path Versioning of API Endpoints
