Fix instructions for EA program

--- a/docs/releases/release_notes/7.5.md
+++ b/docs/releases/release_notes/7.5.md
@@ -44,7 +44,7 @@ which in turn migrates the database from **ArangoDB** to **PostgreSQL**.
 | **Hardware** | **Ideally directly attached NVMe storage is necessary.** Minimum requirements: **8 vCPU, 32 GB RAM**.<div class="admonition info"><p class="admonition-title">Why NVMe?</p><p>PostgreSQL’s performance relies heavily on fast random I/O. Rotary (HDD) storage is no longer supported for production.</p></div> |
 | **Downtime** | Plan a maintenance window of **2+ hours**, depending on snapshot sizes, amount and hardware performance. |
 | **Backup** | Take a **hypervisor snapshot** *after shutting down* the VM (cold snapshot). |
-| **Benchmark (optional but strongly recommended)** | Run `ipf-checker` for **at least 30 minutes** to measure disk performance. (The test saturates the appliance; **schedule during off-hours**.) |
+| **Benchmark** | Run `ipf-checker` to measure disk performance. This is an informational test only. (**Note:** The test saturates the appliance, takes approximately 5-6 minutes, and should be scheduled during off-hours.) |
 | **Customer Support** | Have your IP Fabric Support contact handy in case questions arise. You can also [submit a ticket](https://ipfabric.atlassian.net/servicedesk/customer/portal/1) to our service desk. |
 
 ---
@@ -58,38 +58,32 @@ Follow the steps in order. **Do not interrupt the process** once Step 4 (Launch 
     2. Schedule a downtime window and inform stakeholders that the appliance will be offline.
 
 ??? note "Step 2 - Prepare the Appliance"
-    1. Shut down the appliance gracefully from the UI (**System → Shutdown**).
+    1. Shut down the appliance gracefully [from the CLI](../../System_Administration/Command_Line_Interface/How_to/troubleshooting.md#reboot-and-shutdown).
     2. Create a cold snapshot in your hypervisor; verify its completion.
     3. Power the appliance back on.
+    
+??? note "Step 3 - Launch the `v7.5` Upgrade"
+    1. Follow [offline update manual](../../System_Administration/system_update.md#offline-update) or set [EA release channel](#release-channels) to receive online updates.
+    2. The upgrade will:
 
-??? note "Step 3 - Run Pre-upgrade Health Check *(optional)*"
-    ```shell
-    sudo ipf-checker -d -s
-    ```
-    Let the test run to completion (≈ 30 minutes).
-    Save the output for future reference; we would appreciate if you shared this output with our team, if possible.
-    Reach out to the team [here](https://ipfabric.atlassian.net/servicedesk/customer/portal/1).
-
-??? note "Step 4 - Launch the `v7.5` Upgrade"
-    1. Log in via SSH as an administrative user.
-    2. Download and execute the upgrade package provided by IP Fabric.
-    3. Monitor the console; the upgrade will:
-
-       - Export configuration and snapshots 
+       - Export configuration and snapshots
        - Stop services
        - Install `v7.5` components
        - Start services and migrate data to **PostgreSQL**
        - Import configuration and snapshots
 
-    4. When the upgrade completes successfully, proceed to Step 5.
+    3. After completing the upgrade, proceed to Step 4, if any issues occur during the process, please contact our [Support Team](https://ipfabric.atlassian.net/servicedesk/customer/portal/1) for assistance.
 
-??? note "Step 5 - Post-upgrade Validation"
-    1. Log in to the UI, ensure the dashboard loads without errors. If you see errors, reach out to our team.
-    2. Navigate through a few historical snapshots to confirm data integrity (i.e. check your list of devices to confirm it matches what you expect).
-    3. Launch a Discovery and verify that it finishes.
-    4. Optionally run a quick API request or path lookup to confirm core functionality.
-    5. Observe CPU, RAM usage to ensure the VM is not overloaded.
-
+??? note "Step 4 - Post-upgrade Validation"
+    1. Log in to the UI, ensure all settings and snapshots have been migrated.
+    2. Launch a Discovery and verify that it finishes.
+    3. Optionally run a quick API request or path lookup to confirm core functionality.
+    4. Observe CPU, RAM usage to ensure the VM is not overloaded.
+    5. Run disk performance benchmark
+       ```shell
+       sudo ipf-checker -d -s
+       ```
+       Save the output for future reference. If possible, we would appreciate you sharing this output with our team through the [Support Portal](https://ipfabric.atlassian.net/servicedesk/customer/portal/1).
 ---
 
 !!! info
