--- a/docs/releases/release_notes/7.5.md
+++ b/docs/releases/release_notes/7.5.md
@@ -285,13 +285,11 @@ In previous versions, optional fields were omitted from certain API responses if
 
 - Feature flag [`ENABLE_ACI_FVTENANT_ENDPOINT`](../../System_Administration/Command_Line_Interface/Feature_Flags.md#aci-fvtenant-api-endpoint-removed-in-75) **was removed**
 - **Routing tables** in Device Explorer **were renamed**:
-
   - `Cumulative IPv4 routing table` → **IPv4 routing table**
   - `Cumulative IPv6 routing table` → **IPv6 routing table**
-
   *(Data, URLs, and structure remain unchanged; original names were misleading)*  
-
 - **Added documentation link** to Support Menu: `API Documentation`
 - **Enhanced Feature Matrix** with IPv6 support indicators:
-
   - Added toggle filter to show/hide IPv6 support information  
+- The current status of the PostgreSQL database is now displayed on the [Status Page](../../../IP_Fabric_GUI/tips/system_status) page.
+  - From this page, users can also restart the PostgreSQL database if necessary.
