MQ-8331: Update checksums and LLRN for 7.5.6

--- a/docs/releases/release_notes/7.5.md
+++ b/docs/releases/release_notes/7.5.md
@@ -4,11 +4,6 @@ description: In this section, you can find the release notes for `v7.5` releases
 
 # IP Fabric v7.5
 
-!!! danger "Unreleased Version"
-
-    This is an upcoming IP Fabric version, which has not been released yet and
-    is not available for download.
-
 !!! danger "Upgrade Notice"
 
     An upgrade to `7.5.x` or later is **only** possible from release `7.3.17`.
@@ -98,7 +93,6 @@ Follow the steps in order. **Do not interrupt the process** once Step 4 (Launch 
 
 ### Performance Limitations
 
-- The Wireless AP table may load very slowly.
 - The XDP Unidirectional Neighbors table may be unable to load.
 - During snapshot loading, the GUI may become unresponsive, requiring a page refresh.
 - **Computing Intent Verification Rules** during the loading of an existing snapshot or the creation of a new snapshot (as part of pre-discovery calculations)
@@ -111,29 +105,26 @@ may take longer than expected, as this process is not yet optimized. Performance
 
 ### Database Migration Issues
 
-- In rare cases, Vendor API credentials may not migrate correctly to the PSQL database and may require re-entry.
 - BGP community settings may not import correctly and may need reconfiguration.
 
-### Multicast Path-Lookup Not Working
-
-Multicast path lookups are displayed incorrectly due to an error in the end-to-end algorithm.
-
-### Duplicate Data on Security-Related Tables
-
-Using filters may result in duplicate entries in security-related tables such as NAT44 and ACL.
-
-### RBAC Policies
-
-When updating or creating RBAC policies, the following endpoints cannot be configured:
+## v7.5.6 (August 15th, 2025; EA)
 
 ```
-POST /support/callhome
-GET /support/vpn-start
-GET /support/vpn-status
-GET /support/vpn-stop
+SHA256 (ipfabric-update-7-5-6+0.tar.zst.sig) = 35894014e5ab84ffbe029785ab0d9f38222e95ed41b96dd2f32e005cead81d2b
+MD5 (ipfabric-update-7-5-6+0.tar.zst.sig) = 0115ea482992d9201d10957b3ceeee62
+SHA256 (ipfabric-7-5-6+0.qcow2) = 3d949faacfd18a7dd3f5a4d262fc4030ce006055c5aca793772017e5cafaee30
+MD5 (ipfabric-7-5-6+0.qcow2) = f12835252bf0ddf1ad901799895fc8e7
+SHA256 (ipfabric-7-5-6+0.vmdk) = 918ed6da168570abd435572b4aebe68e372a40b782ffdf3e1d5aafdf45e20017
+MD5 (ipfabric-7-5-6+0.vmdk) = cc16214ee364881f15d63d188b3d6e92
+SHA256 (ipfabric-7-5-6+0.vhdx.zst) = 5e13fc045b2de32ce3a73ef54ee8356d41af9e7bb553aea579fa4d090b80c971
+MD5 (ipfabric-7-5-6+0.vhdx.zst) = 61d681c558b1b681b6a05934eb893168
+SHA256 (unsupported-ESXi6.7U2-ipfabric-7-5-6+0.ova) = 710dc8096c844a98407739b22425cd92f2556d99e8f0560b7471cfa4f319d4ec
+MD5 (unsupported-ESXi6.7U2-ipfabric-7-5-6+0.ova) = 83c59203a703f4996cf8c041ffb1d310
+SHA256 (unsupported-ESXi7.0-ipfabric-7-5-6+0.ova) = ed5c0531db6a7c3495b300912eabfa2bb537d2be918212375406d01caa07f105
+MD5 (unsupported-ESXi7.0-ipfabric-7-5-6+0.ova) = c2745a1ed499ee8e56e0f3651ff5eb5e
+SHA256 (ESXi8.0-ipfabric-7-5-6+0.ova) = f9acc71b9f53c1ba90b100d690d7466c5245292dd64a55d1b99fcb386cbefe07
+MD5 (ESXi8.0-ipfabric-7-5-6+0.ova) = 837c7d7e25a54e6227230b6c83e83cf5
 ```
-
-## v7.5.4 (UNRELEASED; EA)
 
 ### New Features
 
