--- a/docs/releases/release_notes_low-level/7.x/7.3.md
+++ b/docs/releases/release_notes_low-level/7.x/7.3.md
@@ -24,7 +24,7 @@ Anything that we considered an incorrect behavior. Something that was not workin
 - `NIM-20854` -- High -- Silverpeak - 403 errors on API calls when RBAC rule is applied
 - `NIM-20895` -- High -- IPF 7.3 & 7.5 - Configuration Management diff doesn't consider SN+hash but only hash
 - `NIM-20922` -- Highest -- Adding intent check to dashboard via intent check itself deletes all checks in the widget
-- `NIM-20935` -- Medium -- Network Analysis Report has some data from wrong snapshot
+- `NIM-20935` -- Medium -- Network Analysis Report has snapshot timestamps from wrong snapshot
 - `NIM-20944` -- Medium -- Azure ER Circuit ARP - Error: Cannot read properties of null (reading 'value')
 - `NIM-20953` -- High -- Long time getting snapshot logs
 - `NIM-20960` -- Highest -- Azure Discovery - hubRouteTables command causing slowness
