--- a/docs/releases/release_notes_low-level/7.x/7.5.md
+++ b/docs/releases/release_notes_low-level/7.x/7.5.md
@@ -6,7 +6,83 @@ search:
 
 # LLRN 7.5
 
-These are low-level release notes for IP Fabric release branch `7.5`. Please note, that this page contains very low-level information about the actual release, which can lead to false conclusions if you don’t have access to the tickets. On the other hand, it can provide valuable information, if you are looking for a particular detail. This release branch contains a total of 709 fixed issues.
+These are low-level release notes for IP Fabric release branch `7.5`. Please note, that this page contains very low-level information about the actual release, which can lead to false conclusions if you don’t have access to the tickets. On the other hand, it can provide valuable information, if you are looking for a particular detail. This release branch contains a total of 781 fixed issues.
+
+## 7.5.5
+
+### Bugs
+
+Anything that we considered an incorrect behavior. Something that was not working as expected or turned out that did not meet customers' demand.
+
+- `NIM-19271` -- Medium -- Cisco APIC - Platform/Model/Memory utilization is missing/not collected
+- `NIM-19859` -- Highest -- worker@1 heap out of memory during Versa discovery
+- `NIM-19971` -- Medium -- IPF Displays Incorrect Memory Utilization for FortiSwitch Devices
+- `NIM-20034` -- High -- eos errors for commands/arista/_eos/ipRouteVrf and commands/arista/_eos/ipRoute
+- `NIM-20095` -- Highest -- Discovery syslogworker configuration backup - performance logger does not log
+- `NIM-20134` -- Medium -- ABParseError: Unexpected row: access-group OUTSIDE_access_in in interface OUTSIDE per-user-override
+- `NIM-20172` -- High -- End to end path tracing not finding the right ACL on Cisco ASA
+- `NIM-20178` -- Medium -- ABTaskMapResultError: Unable to find localAddress for pimInt: Tu16
+- `NIM-20318` -- Medium -- ABTaskMapResultError: "value" does not match any of the allowed types
+- `NIM-20377` -- High -- PaloAlto - login problem
+- `NIM-20445` -- Medium -- "Database dump without devices data" option fails in TechSupport (PSQL)
+- `NIM-20529` -- High -- IPF 7.2+ upgrade should fix broken PSQL during upgrade
+- `NIM-20530` -- High -- Cisco WLC failing on "SSH client has not received any data for the last 300000 ms! cmd => show client summary"
+- `NIM-20563` -- Medium -- Missing VLAN ID in IPV4 Managed IPv4 addresses - Juniper
+- `NIM-20835` -- High -- "Can't log. The requested logger is not set yet"
+- `NIM-20844` -- Highest -- `/tables/platforms/vdc/devices` Not properly deprecated - Not in any Release Notes
+- `NIM-20846` -- Highest -- Azure - Can't log. The requested logger is not set yet
+- `NIM-20848` -- High -- Worker logs for task or command finished doesn't include enough information for Azure Vendor API
+- `NIM-20854` -- High -- Silverpeak - 403 errors on API calls when RBAC rule is applied
+- `NIM-20868` -- Lowest -- Link to #Groups from PIM Boostrap RP mappings is not working
+- `NIM-20884` -- Medium -- Migration to 7.5.3 failed - No user with admin role is presented in the configuration file
+- `NIM-20887` -- Highest -- IPF Discovery is completely stuck due the AWS devices
+- `NIM-20891` -- High -- Mikrotik - Wrong device serial number
+- `NIM-20895` -- High -- IPF 7.3 & 7.5 - Configuration Management diff doesn't consider SN+hash but only hash
+- `NIM-20921` -- High -- Arista EOS - Backup next-hop is (incorrectly) used in Path Lookups
+- `NIM-20926` -- Highest -- Shaper related networking issues
+- `NIM-20928` -- Medium -- Fix SQL JOIN in /technology/security/lsvpn/satellites
+- `NIM-20931` -- High -- Failed multicast pathlookup
+- `NIM-20932` -- Medium -- Unable to save API endpoint policy in 7.5
+- `NIM-20933` -- High -- TS upgrade testing: failed 7.5.0-26 updateVCollectMetaFromDb.ts Arango migration
+- `NIM-20944` -- Medium -- Azure ER Circuit ARP - Error: Cannot read properties of null (reading 'value')
+- `NIM-20949` -- High -- Vendors API settings import to postgres doesn't work
+- `NIM-20953` -- High -- Long time getting snapshot logs
+- `NIM-20960` -- Highest -- Azure Discovery - hubRouteTables command causing slowness
+- `NIM-20976` -- Highest -- Duplicated rule chains (NAT44)
+- `NIM-20982` -- High -- Configuration import doesn't work on 7.5 if file is exported on lower versions
+- `NIM-20988` -- Medium -- Azure - member state is unknown but availability is up
+- `NIM-20989` -- Medium -- Cisco stack switch showing part number description as c36xx Stack instead Switch 1 in inventory/part-numbers
+- `NIM-20993` -- High -- ArangoImport during snapshot load in PG mode
+- `NIM-20995` -- Medium -- Fix broken filtering integration tests
+- `NIM-21002` -- High -- API clients to not destroy on a data request's Authorization error
+- `NIM-21015` -- High -- BGP Advertised Routes still failing
+- `NIM-21037` -- Medium -- getFhrpGroupMembersTable - MISMATCHED objects with same itemId
+- `NIM-21059` -- Highest -- Configuration import does not overwrite the discovery settings
+
+### Tasks
+
+Task may be associated into Epics or Stories to form complex features.
+
+- `NIM-19050` -- Medium -- 10 - Moderate - Broken Access Controls
+- `NIM-20231` -- Medium -- Relculate intent checks after import is successful
+- `NIM-20350` -- Low -- Fix failing tests for table management/snmp/communities (valid)
+- `NIM-20386` -- Medium -- Fix partitions for calcFromApClientsWhichAreNotInArp
+- `NIM-20395` -- Medium -- Fix partitions for getMplsL2VpnPseudowiresTable
+- `NIM-20396` -- Medium -- Fix partitions for getPlatformsClusterSrxTable
+- `NIM-20397` -- Medium -- Fix partitions for getRoutingProtocolsOspfNeighborsTable
+- `NIM-20400` -- Medium -- Fix partitions for getSpanningTreeInconsistenciesMultipleStpTable
+- `NIM-20401` -- Medium -- Fix partitions for getSpanningTreeInconsistenciesNeighborPortsVlanMismatchTable
+- `NIM-20402` -- Medium -- Fix partitions for getSpanningTreePortsTable
+- `NIM-20404` -- Medium -- Fix partitions for getWirelessClientsTable
+- `NIM-20405` -- Medium -- Fix partitions for reconstructAwsDxgwRouteTable
+- `NIM-20406` -- Medium -- Fix partitions for removeVdcInventory
+- `NIM-20407` -- Medium -- Fix partitions for setErrorIpToReady
+- `NIM-20408` -- Medium -- Fix partitions for setMacAddressesFromParentInterfaces
+- `NIM-20409` -- Medium -- Fix partitions for updateFabricpath
+- `NIM-20502` -- High -- Table /wireless/access-points is very slow
+- `NIM-20957` -- Medium -- Cisco ACI - change mapping of any group from range to trivial true
+- `NIM-20970` -- Medium -- Optimize the StartLimit of discovery services
+- `NIM-20984` -- High -- Do not mask AWS assume role
 
 ## 7.5.4
 
@@ -25,6 +101,7 @@ Anything that we considered an incorrect behavior. Something that was not workin
 - `NIM-20517` -- Medium -- Release Testing - Data consistency - AWS Vendor inventory - resource type modified
 - `NIM-20551` -- Medium -- ipf-system-upgrade possible race condition with upgrade-status.json
 - `NIM-20827` -- Medium -- ACI - security evaluation - expand BD's pcTags to IP ranges
+- `NIM-20849` -- Highest -- Azure tasks/routingTable mapping duration too long, blocking event loop and stuck discovery
 - `NIM-20850` -- Highest -- Azure expressRouteCircuits commands - lock could not be acquired for 3620000 millis, stuck discovery
 - `NIM-20861` -- High -- 7.5.3 - Manual Site Separation not working
 - `NIM-20863` -- High -- after Upgrade to 7.5.3 - unable to load snapshot
@@ -34,15 +111,19 @@ Anything that we considered an incorrect behavior. Something that was not workin
 - `NIM-20879` -- Medium -- Upgrade 7.3.15 --> 7.5.3 failed with "invalid input syntax for type bigint" when inserting into vLdap
 - `NIM-20883` -- Medium -- Upgrade from 7.3-> 7.5.3. network calculations error
 - `NIM-20899` -- High -- Fix commas in optional columns in PSQL (if-def) in /inventory/devices/vendors
+- `NIM-20938` -- Medium -- Fix failing PSQL API test for /tables/security/nat44
 - `NIM-20946` -- Medium -- TS upgrade testing: error: insert into "vReport"
 
 ### Tasks
 
 Task may be associated into Epics or Stories to form complex features.
 
+- `NIM-19771` -- Medium -- Arango - PSQL Regex Discrepancy
 - `NIM-20165` -- High -- Test Upgrade Process on realistic data [before GA]
+- `NIM-20347` -- Medium -- Fix failing test for table /jobs (valid)
 - `NIM-20353` -- Medium -- Fix failing tests for table security/acl/index (valid)
 - `NIM-20358` -- Low -- Fix failing tests for table spanningTree/inconsistencies/portsMultipleNeighbors (valid)
+- `NIM-20371` -- High -- Stop licensing lightweight wireless AP controllers [7.3, 7.5, 7.6]
 - `NIM-20388` -- High -- Fix partitions for getCachedGraphNodes
 - `NIM-20391` -- High -- Fix partitions for getEdgesIntoOpenPaths
 - `NIM-20392` -- High -- Fix partitions for getEdgesOutOfNodes
@@ -191,7 +272,7 @@ Epics are high-level features, that may consist of many tasks.
 - `NIM-10927` -- High -- API convert all tables endpoints from AQL to PSQL
 - `NIM-12678` -- High -- API convert e2e queries to PSQL (pathlookup)
 - `NIM-12702` -- Medium -- API convert controllers to PSQL
-- `NIM-15669` -- Highest -- Arango -> PSQL Upgrade Process
+- `NIM-15669` -- Highest -- Arango -> PSQL Upgrade Process [7.5]
 - `NIM-15816` -- High -- Fix queries failing tests
 - `NIM-16494` -- High -- Prepare for PSQL stable release
 - `NIM-17027` -- High -- Transparent FW
@@ -201,7 +282,7 @@ Epics are high-level features, that may consist of many tasks.
 - `NIM-18154` -- Medium -- Create an API client generated from OAS to improve type consistency
 - `NIM-18450` -- High -- Extensions – security
 - `NIM-18629` -- Highest -- Follow up on AQL/PSQL queries
-- `NIM-18696` -- High -- Add support for Multi-Segment/tenant SD-WAN routing
+- `NIM-18696` -- High -- [NAE] Add support for Multi-Segment/tenant SD-WAN routing 7.5
 - `NIM-18856` -- High -- Add support for F5OS - basic vendor discovery of chassis information
 - `NIM-18869` -- Medium -- Discover Cisco 9300 switches running in cloud-native mode via Meraki API
 - `NIM-18897` -- Medium -- Cloud scaling groups
@@ -212,6 +293,7 @@ Epics are high-level features, that may consist of many tasks.
 - `NIM-19114` -- Medium -- Viptela - Collect Device Configuration
 - `NIM-19147` -- High -- Config Backup over IPv6
 - `NIM-19162` -- High -- Extensions - bugs
+- `NIM-19381` -- Medium -- Utilize Chromatic for automated visual testing of Storybook library
 - `NIM-19393` -- Medium -- Cisco Meraki - Path lookup improvements - research [7.5]
 - `NIM-19397` -- High -- PSQL - Fix partition selection in API Tables
 - `NIM-19425` -- Medium -- AWS NAT gateway NAT44
@@ -505,6 +587,8 @@ Anything that we considered an incorrect behavior. Something that was not workin
 - `NIM-20272` -- Medium -- ipf-migrate fails migrating 6.5.2 snapshot vCollect to PSQL
 - `NIM-20311` -- Highest -- "API died" after restoring backup (PSQL)
 - `NIM-20424` -- Highest -- Database dump is missing in TechSupport UI
+- `NIM-20858` -- Medium -- Release Testing - Data consistency - Portchannel inbound table
+- `NIM-20924` -- Medium -- Use DoublePostgresColumn instead of IntegerPostgresColumn for columns using TIMESTAMP_DOUBLE
 
 ### Tasks
 
